Memberi responsive styling pada semua screen breakpoint khusus halaman categories

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -415,6 +415,86 @@
     top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
+  } 
+
+  /* Categories */
+  #categories {
+    padding: 60px 0 60px 0;
+    /* background: #F1F1F1; */
+  }
+
+  .mb-120 {
+    margin-bottom: 30px;
+  }
+
+  #categories h2 {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  #categories .categories-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 100%;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  #categories .categories-wrapper .category {
+    width: 540px;
+    height: 305px;
+    border-radius: 12px;
+    overflow: hidden;
+    background-color: var(--gray-100);
+    position: relative;
+    transition: all 0.3s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover {  
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: -200px;
+  }
+
+  #categories .categories-wrapper .category .inside-content {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    background-color: var(--dark-100);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.1s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover .inside-content {
+    visibility: visible;
+    transition: all 0.1s ease-in-out;
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category .inside-content p {
+    font-size: 24px;
+    text-align: center;
+    color: #fff;
+    margin: auto;
+    font-family: var(--lora);
+    font-weight: 700;
   }
 }
 
@@ -852,6 +932,87 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+
+  /* Categories */
+  #categories {
+    padding: 60px 0 60px 0;
+    /* background: #F1F1F1; */
+  }
+
+  .mb-120 {
+    margin-bottom: 30px;
+  }
+
+  #categories h2 {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  #categories .categories-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 100%;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  #categories .categories-wrapper .category {
+    width: 540px;
+    height: 305px;
+    border-radius: 12px;
+    overflow: hidden;
+    background-color: var(--gray-100);
+    position: relative;
+    transition: all 0.3s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover {  
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  #categories .categories-wrapper .category .inside-content {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    background-color: var(--dark-100);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.1s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover .inside-content {
+    visibility: visible;
+    transition: all 0.1s ease-in-out;
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category .inside-content p {
+    font-size: 28px;
+    text-align: center;
+    color: #fff;
+    margin: auto;
+    font-family: var(--lora);
+    font-weight: 700;
+  }
 }
 
 /* Middle size - md ( >=768px ) */
@@ -1287,6 +1448,86 @@
     top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+  
+  /* Categories */
+  #categories {
+    padding: 60px 0 60px 0;
+    /* background: #F1F1F1; */
+  }
+
+  .mb-120 {
+    margin-bottom: 60px;
+  }
+
+  #categories h2 {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  #categories .categories-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 100%;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  #categories .categories-wrapper .category {
+    width: 540px;
+    height: 305px;
+    border-radius: 12px;
+    overflow: hidden;
+    background-color: var(--gray-100);
+    position: relative;
+    transition: all 0.3s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover {  
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  #categories .categories-wrapper .category .inside-content {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    background-color: var(--dark-100);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.1s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover .inside-content {
+    visibility: visible;
+    transition: all 0.1s ease-in-out;
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category .inside-content p {
+    font-size: 28px;
+    text-align: center;
+    color: #fff;
+    margin: auto;
+    font-family: var(--lora);
+    font-weight: 700;
   }
 }
 
@@ -1740,6 +1981,87 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  
+
+  /* Categories */
+  #categories {
+    padding: 60px 0 60px 0;
+    /* background: #F1F1F1; */
+  }
+
+  .mb-120 {
+    margin-bottom: 60px;
+  }
+
+  #categories h2 {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  #categories .categories-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 100%;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  #categories .categories-wrapper .category {
+    width: 48%;
+    height: 305px;
+    border-radius: 12px;
+    overflow: hidden;
+    background-color: var(--gray-100);
+    position: relative;
+    transition: all 0.3s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover {  
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  #categories .categories-wrapper .category .inside-content {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    background-color: var(--dark-100);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.1s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover .inside-content {
+    visibility: visible;
+    transition: all 0.1s ease-in-out;
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category .inside-content p {
+    font-size: 22px;
+    text-align: center;
+    color: #fff;
+    margin: auto;
+    font-family: var(--lora);
+    font-weight: 700;
+  }
 }
 
 /* Extra large size - xl ( >=1200px ) */
@@ -2187,6 +2509,87 @@
     top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+
+
+  /* Categories */
+  #categories {
+    padding: 60px 0 60px 0;
+    /* background: #F1F1F1; */
+  }
+
+  .mb-120 {
+    margin-bottom: 60px;
+  }
+
+  #categories h2 {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  #categories .categories-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 100%;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  #categories .categories-wrapper .category {
+    width: 48%;
+    height: 305px;
+    border-radius: 12px;
+    overflow: hidden;
+    background-color: var(--gray-100);
+    position: relative;
+    transition: all 0.3s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover {  
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  #categories .categories-wrapper .category .inside-content {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    background-color: var(--dark-100);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.1s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover .inside-content {
+    visibility: visible;
+    transition: all 0.1s ease-in-out;
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category .inside-content p {
+    font-size: 26px;
+    text-align: center;
+    color: #fff;
+    margin: auto;
+    font-family: var(--lora);
+    font-weight: 700;
   }
 }
 
@@ -2658,5 +3061,85 @@
     left: 50%;
   }
 
+
+  /* Categories */
+  #categories {
+    padding: 60px 0 60px 0;
+    /* background: #F1F1F1; */
+  }
+
+  .mb-120 {
+    margin-bottom: 129px;
+  }
+
+  #categories h2 {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  #categories .categories-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 100%;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  #categories .categories-wrapper .category {
+    width: 48%;
+    height: 305px;
+    border-radius: 12px;
+    overflow: hidden;
+    background-color: var(--gray-100);
+    position: relative;
+    transition: all 0.3s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover {  
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  #categories .categories-wrapper .category .inside-content {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    background-color: var(--dark-100);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.1s ease-in-out;
+  }
+
+  #categories .categories-wrapper .category:hover .inside-content {
+    visibility: visible;
+    transition: all 0.1s ease-in-out;
+    opacity: 80%;
+  }
+
+  #categories .categories-wrapper .category .inside-content p {
+    font-size: 28px;
+    text-align: center;
+    color: #fff;
+    margin: auto;
+    font-family: var(--lora);
+    font-weight: 700;
+  }
 }
 
