--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -675,11 +675,6 @@ nav .navbar-flex .navigation-social-media a img {
   grid-column: 1;
 }
 
-.content a {
-  color: var(--dark-100);
-  text-decoration: none;
-}
-
 #pricing {
   padding: 60px 0 60px 0;
   /* background: #f1f1f1; */
@@ -774,9 +769,13 @@ nav .navbar-flex .navigation-social-media a img {
 }
 
 #pricing .pricing-wrapper .card-price .card-price-body .benefit img {
-  width: 24px;
+  width: 20px;
   height: 100%;
   /* background-color: red; */
+}
+
+#pricing .pricing-wrapper .card-price .card-price-body .benefit p {
+  font-size: 16px;
 }
 
 
